<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10sp"
    android:gravity="center"
    android:paddingVertical="10sp"
    tools:context=".AdministracionActivity">

    <TextView
        android:id="@+id/txtView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="2dp"
        android:text="@string/insert"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:hint="Nombre"
        android:id="@+id/nombre"
        app:layout_constraintBottom_toTopOf="@+id/simbolo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtView"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10sp"
        android:hint="Simbolo"
        android:id="@+id/simbolo"
        app:layout_constraintBottom_toTopOf="@+id/numAtomico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:hint="Numero Atomico"
        android:id="@+id/numAtomico"
        app:layout_constraintBottom_toTopOf="@+id/simbolo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/estado"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10sp"
        android:hint="Estado"
        android:id="@+id/estado"
        app:layout_constraintBottom_toTopOf="@+id/btnInsertar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numAtomico"/>

    <Button
        android:layout_width="175dp"
        android:layout_height="57dp"
        android:layout_marginTop="15dp"
        android:text="@string/insertar"
        android:id="@+id/btnInsertar"
        app:layout_constraintBottom_toTopOf="@+id/btnModificar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/estado"/>

    <Button
        android:layout_width="175dp"
        android:layout_height="57dp"
        android:layout_marginTop="10sp"
        android:text="@string/modificar"
        android:id="@+id/btnModificar"
        app:layout_constraintBottom_toTopOf="@+id/btnBorrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInsertar"/>

    <Button
        android:layout_width="175dp"
        android:layout_height="57dp"
        android:layout_marginTop="10sp"
        android:text="@string/borrar"
        android:id="@+id/btnBorrar"
        app:layout_constraintBottom_toTopOf="@+id/btnVolver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnModificar"/>

    <Button
        android:layout_width="175dp"
        android:layout_height="57dp"
        android:layout_marginTop="10sp"
        android:text="@string/volver"
        android:id="@+id/btnVolver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBorrar"/>
</androidx.constraintlayout.widget.ConstraintLayout>