<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10sp"
    android:gravity="center"
    android:paddingVertical="10sp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/txtView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="2dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:hint="Usuario"
        android:id="@+id/usuario"
        app:layout_constraintBottom_toTopOf="@+id/contraseña"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtView"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10sp"
        android:hint="Contraseña"
        android:inputType="textPassword"
        android:id="@+id/contraseña"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usuario"/>

    <Button
        android:layout_width="175dp"
        android:layout_height="57dp"
        android:layout_marginTop="10sp"
        android:text="@string/loginBtn"
        android:id="@+id/btnLogin"
        app:layout_constraintBottom_toTopOf="@+id/imgError"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contraseña"/>

    <ImageView
        android:id="@+id/imgError"
        android:layout_width="200dp"
        android:layout_marginTop="10sp"
        android:layout_height="100dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btnCancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <Button
        android:layout_width="175dp"
        android:layout_height="57dp"
        android:layout_marginTop="10sp"
        android:text="@string/cancelar"
        android:id="@+id/btnCancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgError"/>

</androidx.constraintlayout.widget.ConstraintLayout>