<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10sp"
    android:gravity="center"
    android:paddingVertical="10sp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/txtView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="2dp"
        android:text="@string/consulta"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:hint="Nombre"
        android:id="@+id/nombre"
        app:layout_constraintBottom_toTopOf="@+id/btnBuscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtView"/>

    <Button
        android:layout_width="175dp"
        android:layout_height="57dp"
        android:layout_marginTop="10sp"
        android:text="@string/buscar"
        android:id="@+id/btnBuscar"
        app:layout_constraintBottom_toTopOf="@+id/btnCancelar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre"/>

    <Button
        android:layout_width="175dp"
        android:layout_height="57dp"
        android:layout_marginTop="10sp"
        android:text="@string/cancelar"
        android:id="@+id/btnCancelar"
        app:layout_constraintBottom_toTopOf="@+id/simbolo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBuscar"/>

    <TextView
        android:layout_width="175dp"
        android:layout_height="57dp"
        android:layout_marginTop="30sp"
        android:text=""
        android:visibility="invisible"
        android:id="@+id/simbolo"
        app:layout_constraintBottom_toTopOf="@+id/numAtomico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCancelar"/>

    <TextView
        android:layout_width="175dp"
        android:layout_height="57dp"
        android:layout_marginTop="10sp"
        android:visibility="invisible"
        android:text=""
        android:id="@+id/numAtomico"
        app:layout_constraintBottom_toTopOf="@+id/estado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simbolo"/>

    <TextView
        android:layout_width="175dp"
        android:layout_height="57dp"
        android:layout_marginTop="10sp"
        android:visibility="invisible"
        android:text=""
        android:id="@+id/estado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numAtomico"/>

</androidx.constraintlayout.widget.ConstraintLayout>